[gd_scene load_steps=2 format=3 uid="uid://kscx26dn7yvh"]

[ext_resource type="Script" uid="uid://bgur2qhr7iglw" path="res://scenes/attack_menu.gd" id="1_v24td"]

[node name="AttackMenu" type="CanvasLayer"]
script = ExtResource("1_v24td")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -73.5
offset_right = 79.0
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Prepare Attack"

[node name="TargetLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Target: unkiwn"

[node name="StatsLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Def: ??? | Loot: ???"

[node name="ArmyInfoLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Availiable: 0 soldiers"

[node name="BtnAttack" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "MARCH!"

[node name="BtnCancel" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"

[connection signal="pressed" from="Control/Panel/VBoxContainer/BtnAttack" to="." method="_on_btn_attack_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/BtnCancel" to="." method="_on_btn_cancel_pressed"]
